--- a/frontend/src/Style/Query.css
+++ b/frontend/src/Style/Query.css
@@ -70,3 +70,7 @@
 #queries-del:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+#queries-content {
+    margin-right: 100px;
+}
