--- a/frontend/src/Style/Post.css
+++ b/frontend/src/Style/Post.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    margin-top: 10%;
-    margin-bottom: 2%;
+    padding-top: 10%;
+    padding-bottom: 2%;
     width: 100%;
 }
 
@@ -19,7 +19,7 @@
     display: flex;
     align-items:center;
     justify-content:center;
-    padding: 15px;
+    padding: 10px;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 10px;
