--- a/frontend/src/Style/LoginPage.css
+++ b/frontend/src/Style/LoginPage.css
@@ -28,7 +28,7 @@
     height: 75%;
     background-color: rgb(218, 42, 78);
     background-color: rgba(178, 115, 115, 0.665);
-    background-color: rgba(10, 103, 10, 0.8);
+    /* background-color: rgba(10, 103, 10, 0.8); */
     display: flex;
     flex-direction: column;
     justify-content: center;
