--- a/frontend/src/Style/Post.css
+++ b/frontend/src/Style/Post.css
@@ -41,7 +41,7 @@
     height: 100%;
     background-color: blue;
     border-radius: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
 #ad-highlight img {
@@ -68,7 +68,7 @@
     font-weight: 600 ;
     margin: 0;
     padding: 0;
-}   
+}
 
 #minor-details {
     display: flex;
