--- a/frontend/src/Style/Post.css
+++ b/frontend/src/Style/Post.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    padding-top: 10%;
-    padding-bottom: 2%;
+    padding-top: 20vh;
+    padding-bottom: 4vh;
     width: 100%;
 }
 
@@ -143,6 +143,22 @@
     position: absolute;
     padding: 1.1% 2%;
     margin-left: 38%;
-    margin-top: 4.5%;
+    margin-top: 9vh;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+@media only screen and (max-width: 950px) {
+    .post-link {
+        width: 95%;
+        margin-right: 4%;
+    }
+
+    #purpose-logo {
+        margin-left: 83%;
+    }
+
+    #del-button {
+        margin-left: 84%;
+        margin-top: 7vh;
+    }
 }
