--- a/frontend/src/Style/QueryForm.css
+++ b/frontend/src/Style/QueryForm.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 12%;
+    padding-top: 19vh;
     background-color: rgb(255, 255, 255);
 }
 
